--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+
 .App {
   text-align: center;
+  align-items: center;  
+  justify-content: center;
 }
 
 .App-logo {
@@ -35,4 +40,119 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.row1{
+  display: flex;
+  gap : 10px;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 3rem;
+
+}
+
+.centered{
+  align-items: center;  
+  justify-content: center;
+  /* background-color: rgb(15, 31, 37); */
+  margin: auto;
+  
+}
+@keyframes gradientMove {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
+
+.tableStyle{
+  border-collapse: collapse;
+  width: 80%;
+  margin: 20px auto;
+  background: rgba(255,255,255,0.06);
+  backdrop-filter: blur(6px);
+  border: 1px solid #00eaff33;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.tableStyle th {
+  background: rgba(0,234,255,0.2);
+  color: #00eaff;
+  font-family: 'Orbitron';
+  padding: 12px;
+}
+
+.tableStyle td {
+  padding: 12px;
+  color: #dffcff;
+  border-top: 1px solid #00eaff22;
+  text-align: center;
+}
+.inputBox{
+  background: rgba(255,255,255,0.05);
+  color: #e0f9ff;
+  border: 1px solid #00eaff55;
+  border-radius: 8px;
+  padding: 8px 14px;
+  outline: none;
+  transition: 0.2s;
+}
+
+.inputBox:focus {
+  border: 1px solid #00eaff;
+  box-shadow: 0 0 10px #00eaff55;
+}
+
+.pageHeading{
+  font-size: 4rem;
+  color: coral;
+  padding: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-text-stroke: 2px rgb(151, 13, 45);
+  font-family: 'Orbitron', sans-serif;
+  color: #00eaff;
+  text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff;
+}
+
+
+.addButton{
+  background: #00eaff;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 10px #00eaff80;
+  transition: 0.3s ease;
+}
+
+.addButton:hover{
+  box-shadow: 0 0 15px #00eaff;
+  transform: translateY(-2px);
+}
+.deleteBtn {
+  background-color: transparent;
+  border: 1px solid #ff4d6d;
+  color: #ff4d6d;
+  padding: 4px 8px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.deleteBtn:hover {
+  background-color: #ff4d6d;
+  color: black;
+  box-shadow: 0 0 8px #ff4d6d;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(15, 31, 37); /* same as your dark bg */
+  height: 100%;
+  background: linear-gradient(135deg, #020b13, #061a26, #040f1d);
+  background-size: 400% 400%;
+  animation: gradientMove 10s ease infinite;
 }
